@@ -18,8 +18,7 @@ if test -z "$w3_args"
 then
     w3_browse_url "http://developer.mozilla.org"
 else
-    escaped_args=`w3_url_of_arg $w3_args`
-    w3_browse_url "http://developer.mozilla.org/en-US/search?q=${escaped_args}"
+    w3_custom_search -s=developer.mozilla.org "$w3_shquoted_args"
 fi
 
 
